add role to access token